--- a/src/main/webapp/WEB-INF/pages/blog.html
+++ b/src/main/webapp/WEB-INF/pages/blog.html
@@ -35,46 +35,46 @@
 				<nav class="navbar navbar-default">
 					<div class="navbar-header navbar-left">
 						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-									<span class="sr-only">Toggle navigation</span>
-									<span class="icon-bar"></span>
-									<span class="icon-bar"></span>
-									<span class="icon-bar"></span>
-								</button>
-						<h1><a class="navbar-brand" href="index.html"> Surf Inn</a></h1>
+							<span class="sr-only">Toggle navigation</span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+						<h1><a class="navbar-brand" href="index.html"> 消防</a></h1>
 					</div>
-					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="header_left">
 						<ul>
-							<li><a class="shop" href="shop.html">Shop Now</a></li>
+							<li><a class="shop" href="/FireFight/shop">Shop Now</a></li>
 							<li><a class="sign" href="#" data-toggle="modal" data-target="#myModal2"><i class="fa fa-user" aria-hidden="true"></i></a></li>
 
 						</ul>
 					</div>
+					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
 
 						<div class="top_nav_left">
 							<nav class="cl-effect-15" id="cl-effect-15">
 								<ul>
-									<li><a href="index.html" data-hover="Home">Home</a></li>
-									<li><a href="about.html" data-hover="About">About</a></li>
-									<li class="active"><a href="blog.html" data-hover="Blog">Blog</a></li>
-									<li class="dropdown">
-										<a href="services.html" data-hover="Drop Down" class="dropdown-toggle" data-toggle="dropdown">Drop Down <b class="fa fa-angle-down"></b></a>
-										<ul class="dropdown-menu">
-											<li><a href="404.html">Services</a></li>
-											<li class="divider"></li>
-											<li><a class="s-menu" href="#">Pages <b class="fa fa-angle-right"></b></a>
-												<ul class="dropdown-menu sub-menu">
-													<li><a href="404.html">Error</a></li>
-													<li class="divider"></li>
-													<li><a href="gallery.html">Gallery</a></li>
-												</ul>
-											</li>
+									<li class="active"><a href="/FireFight/index" data-hover="主页">主页</a></li>
+									<li><a href="/FireFight/about" data-hover="关于">关于</a></li>
+									<li><a href="/FireFight/blog" data-hover="动态">动态</a></li>
+									<!--									<li class="dropdown">-->
+									<!--										<a href="services.html" data-hover="Drop Down" class="dropdown-toggle" data-toggle="dropdown">Drop Down <b class="fa fa-angle-down"></b></a>-->
+									<!--										<ul class="dropdown-menu">-->
+									<!--											<li><a href="404.html">Services</a></li>-->
+									<!--											<li class="divider"></li>-->
+									<!--											<li><a class="s-menu" href="#">Pages <b class="fa fa-angle-right"></b></a>-->
+									<!--												<ul class="dropdown-menu sub-menu">-->
+									<!--													<li><a href="404.html">Error</a></li>-->
+									<!--													<li class="divider"></li>-->
+									<!--													<li><a href="gallery.html">Gallery</a></li>-->
+									<!--												</ul>-->
+									<!--											</li>-->
 
-										</ul>
-									</li>
+									<!--										</ul>-->
+									<!--									</li>-->
 
-									<li><a href="Contact.html" data-hover="Contact">Contact</a></li>
+									<li><a href="/FireFight/contact" data-hover="联系我们">联系我们</a></li>
 								</ul>
 							</nav>
 						</div>
@@ -99,18 +99,6 @@
 			</div>
 		</div>
 		<!-- banner -->
-          <div class="banner_inner">
-                   <div class="services-breadcrumb">
-						<div class="inner_breadcrumb">
-
-							<ul class="short">
-								<li><a href="index.html">Home</a><i>|</i></li>
-								<li>Blog</li>
-							</ul>
-						</div>
-					</div>
-
-		  </div>
 		<!--//banner -->
 
 		<!-- Modal1 -->
@@ -177,207 +165,43 @@
 	<!--about-->
 	<div class="ab_content">
 		<div class="container">
-			<h3 class="tittle-w3ls">Blog</h3>
-		        <div class="inner_sec_info_w3ls_agile">
-				<div class="col-md-8 blog_section">
-					<div class="col-md-6 blog_img">
+			<h3 class="tittle-w3ls">动态</h3>
+			<div class="inner_sec_info_w3ls_agile">
 						<div class="blog_con">
-							<a href="single.html"><img src="/FireFight/images/1.jpg" alt=" " class="img-responsive"></a>
 							<div class="blog_info">
 								<h4>2nd / Nov 2017</h4>
 								<h5><a href="single.html">Consectetur adipiscing elit</a></h5>
-								<ul class="blog_list">
-									<li><span class="fa fa-user" aria-hidden="true"></span><a href="#">Jan Mark</a><i>|</i></li>
-									<li><span class="fa fa-heart" aria-hidden="true"></span><a href="#">10</a><i>|</i></li>
-									<li><span class="fa fa-tag" aria-hidden="true"></span><a href="#">5</a></li>
-
-								</ul>
 								<p>Pellentesque eleifend ultricies tellus,varius risus, id dignissim sapien velit id felis ac cursus eros.</p>
 							</div>
 						</div>
+				<div class="clearfix"> </div>
+			</div>
+			<div class="inner_sec_info_w3ls_agile">
+				<div class="blog_con">
+					<div class="blog_info">
+						<h4>2nd / Nov 2017</h4>
+						<h5><a href="single.html">Consectetur adipiscing elit</a></h5>
+						<p>Pellentesque eleifend ultricies tellus,varius risus, id dignissim sapien velit id felis ac cursus eros.</p>
 					</div>
-					<div class="col-md-6 blog_img">
-						<div class="blog_con">
-							<a href="single.html"><img src="/FireFight/images/2.jpg" alt=" " class="img-responsive"></a>
-							<div class="blog_info">
-								<h4>9th / Nov 2017</h4>
-								<h5><a href="single.html">Consectetur adipiscing elit</a></h5>
-								<ul class="blog_list">
-									<li><span class="fa fa-user" aria-hidden="true"></span><a href="#">Jan Mark</a><i>|</i></li>
-									<li><span class="fa fa-heart" aria-hidden="true"></span><a href="#">30</a><i>|</i></li>
-									<li><span class="fa fa-tag" aria-hidden="true"></span><a href="#">5</a></li>
-
-								</ul>
-								<p>Pellentesque eleifend ultricies tellus,varius risus, id dignissim sapien velit id felis ac cursus eros.</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-6 blog_img">
-						<div class="blog_con">
-							<a href="single.html"><img src="/FireFight/images/3.jpg" alt=" " class="img-responsive"></a>
-							<div class="blog_info">
-								<h4>12nd / Nov 2017</h4>
-								<h5><a href="single.html">Consectetur adipiscing elit</a></h5>
-								<ul class="blog_list">
-									<li><span class="fa fa-user" aria-hidden="true"></span><a href="#">Jan Mark</a><i>|</i></li>
-									<li><span class="fa fa-heart" aria-hidden="true"></span><a href="#">10</a><i>|</i></li>
-									<li><span class="fa fa-tag" aria-hidden="true"></span><a href="#">5</a></li>
-
-								</ul>
-								<p>Pellentesque eleifend ultricies tellus,varius risus, id dignissim sapien velit id felis ac cursus eros.</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-6 blog_img">
-						<div class="blog_con">
-							<a href="single.html"><img src="/FireFight/images/1.jpg" alt=" " class="img-responsive"></a>
-							<div class="blog_info">
-								<h4>22nd / Nov 2017</h4>
-								<h5><a href="single.html">Consectetur adipiscing elit</a></h5>
-								<ul class="blog_list">
-									<li><span class="fa fa-user" aria-hidden="true"></span><a href="#">Jan Mark</a><i>|</i></li>
-									<li><span class="fa fa-heart" aria-hidden="true"></span><a href="#">20</a><i>|</i></li>
-									<li><span class="fa fa-tag" aria-hidden="true"></span><a href="#">5</a></li>
-
-								</ul>
-								<p>Pellentesque eleifend ultricies tellus,varius risus, id dignissim sapien velit id felis ac cursus eros.</p>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-12 blog_img lost">
-						<div class="blog_con">
-							<a href="single.html"><img src="/FireFight/images/banner1.jpg" alt=" " class="img-responsive"></a>
-							<div class="blog_info">
-								<h4>1st / Dec 2017</h4>
-								<h5><a href="single.html">Consectetur adipiscing elit</a></h5>
-								<ul class="blog_list">
-									<li><span class="fa fa-user" aria-hidden="true"></span><a href="#">Jan Mark</a><i>|</i></li>
-									<li><span class="fa fa-heart" aria-hidden="true"></span><a href="#">10</a><i>|</i></li>
-									<li><span class="fa fa-tag" aria-hidden="true"></span><a href="#">2</a></li>
-
-								</ul>
-								<p>Pellentesque eleifend ultricies tellus,varius risus, id dignissim sapien velit id felis ac cursus eros.</p>
-							</div>
-						</div>
-					</div>
-					<nav class="paging1">
-						<ul class="pagination">
-							<li>
-								<a href="#" aria-label="Previous">
-						<span aria-hidden="true">«</span>
-					  </a>
-							</li>
-							<li><a href="#">1</a></li>
-							<li><a href="#">2</a></li>
-							<li><a href="#">3</a></li>
-							<li><a href="#">4</a></li>
-							<li><a href="#">5</a></li>
-							<li>
-								<a href="#" aria-label="Next">
-						<span aria-hidden="true">»</span>
-					  </a>
-							</li>
-						</ul>
-					</nav>
 				</div>
-				<div class="col-md-4 blog_left">
-					<div class="search left_bar">
-						<h3>Subscribe <span>here</span></h3>
-						<form action="#" method="post">
-							<input class="email" type="email" name="Email" placeholder="Email here" required="">
-							<input type="submit" value="Send">
-						</form>
+				<div class="clearfix"> </div>
+			</div>
+			<div class="inner_sec_info_w3ls_agile">
+				<div class="blog_con">
+					<div class="blog_info">
+						<h4>2nd / Nov 2017</h4>
+						<h5><a href="single.html">Consectetur adipiscing elit</a></h5>
+						<p>Pellentesque eleifend ultricies tellus,varius risus, id dignissim sapien velit id felis ac cursus eros.</p>
 					</div>
-					<div class="author left_bar">
-						<h3>About <span>Admin</span></h3>
-						<div class="author_grid">
-							<p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.Vestibulum nec vestibulum
-								dui. Praesent lectus arcu, venenatis at iaculis.</p>
-							<div class="author_grid_pos">
-								<img src="/FireFight/images/t1.jpg" alt=" " class="img-responsive">
-							</div>
-						</div>
-					</div>
-					<div class="faq left_bar">
-						<h3>FAQ's</h3>
-						<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-							<div class="panel panel-default">
-								<div class="panel-heading" role="tab" id="headingOne">
-									<h4 class="panel-title asd">
-										<a class="pa_italic" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true"
-										    aria-controls="collapseOne">
-							  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i class="glyphicon glyphicon-minus" aria-hidden="true"></i>assumenda est cliche voluptate
-							</a>
-									</h4>
-								</div>
-								<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-									<div class="panel-body panel_text">
-										Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-										cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-									</div>
-								</div>
-							</div>
-							<div class="panel panel-default">
-								<div class="panel-heading" role="tab" id="headingTwo">
-									<h4 class="panel-title asd">
-										<a class="pa_italic collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false"
-										    aria-controls="collapseTwo">
-							  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i class="glyphicon glyphicon-minus" aria-hidden="true"></i>Itaque earum rerum
-							</a>
-									</h4>
-								</div>
-								<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-									<div class="panel-body panel_text">
-										Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-										cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-									</div>
-								</div>
-							</div>
-							<div class="panel panel-default">
-								<div class="panel-heading" role="tab" id="headingThree">
-									<h4 class="panel-title asd">
-										<a class="pa_italic collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false"
-										    aria-controls="collapseThree">
-							  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i class="glyphicon glyphicon-minus" aria-hidden="true"></i>autem accusamus terry qui
-							</a>
-									</h4>
-								</div>
-								<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-									<div class="panel-body panel_text">
-										Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-										cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-									</div>
-								</div>
-							</div>
-							<div class="panel panel-default">
-								<div class="panel-heading" role="tab" id="headingFour">
-									<h4 class="panel-title asd">
-										<a class="pa_italic collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false"
-										    aria-controls="collapseFour">
-							  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i class="glyphicon glyphicon-minus" aria-hidden="true"></i>excepturi sint cliche proident
-							</a>
-									</h4>
-								</div>
-								<div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
-									<div class="panel-body panel_text">
-										Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-										cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="categories left_bar">
-						<h3>Categories</h3>
-						<ul>
-							<li><a href="single.html"><span class="fa fa-angle-right" aria-hidden="true"></span>tellus faucibus eleifend sit amet</a></li>
-							<li><a href="single.html"><span class="fa fa-angle-right" aria-hidden="true"></span>Mauris ut odio sed nisi convallis</a></li>
-							<li><a href="single.html"><span class="fa fa-angle-right" aria-hidden="true"></span>Curabitur a sapien et tellus</a></li>
-							<li><a href="single.html"><span class="fa fa-angle-right" aria-hidden="true"></span>porta nunc eget, lobortis nulla</a></li>
-							<li><a href="single.html"><span class="fa fa-angle-right" aria-hidden="true"></span>Sed ut metus turpis cursus</a></li>
-							<li><a href="single.html"><span class="fa fa-angle-right" aria-hidden="true"></span>Maecenas cursus at ex a faucibus</a></li>
-
-						</ul>
+				</div>
+				<div class="clearfix"> </div>
+			</div>
+			<div class="inner_sec_info_w3ls_agile">
+				<div class="blog_con">
+					<div class="blog_info">
+						<h4>2nd / Nov 2017</h4>
+						<h5><a href="single.html">Consectetur adipiscing elit</a></h5>
+						<p>Pellentesque eleifend ultricies tellus,varius risus, id dignissim sapien velit id felis ac cursus eros.</p>
 					</div>
 				</div>
 				<div class="clearfix"> </div>
