--- a/src/main/webapp/WEB-INF/pages/contact.html
+++ b/src/main/webapp/WEB-INF/pages/contact.html
@@ -36,50 +36,51 @@
 				<nav class="navbar navbar-default">
 					<div class="navbar-header navbar-left">
 						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-									<span class="sr-only">Toggle navigation</span>
-									<span class="icon-bar"></span>
-									<span class="icon-bar"></span>
-									<span class="icon-bar"></span>
-								</button>
-						<h1><a class="navbar-brand" href="index.html"> Surf Inn</a></h1>
+							<span class="sr-only">Toggle navigation</span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+						<h1><a class="navbar-brand" href="index.html"> 消防</a></h1>
 					</div>
-					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="header_left">
 						<ul>
-							<li><a class="shop" href="shop.html">Shop Now</a></li>
-							<li><a class="sign" href="#" data-toggle="modal" data-target="#myModal2"><i class="fa fa-user" aria-hidden="true"></i></a></li>
+							<li><a class="shop" href="/FireFight/shop">Shop Now</a></li>
+							<li ><a class="shop"  href="">账户</a></li>
 
 						</ul>
 					</div>
+					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
 
 						<div class="top_nav_left">
 							<nav class="cl-effect-15" id="cl-effect-15">
 								<ul>
-									<li><a href="index.html" data-hover="Home">Home</a></li>
-									<li><a href="about.html" data-hover="About">About</a></li>
-									<li><a href="blog.html" data-hover="Blog">Blog</a></li>
-									<li class="dropdown">
-										<a href="services.html" data-hover="Drop Down" class="dropdown-toggle" data-toggle="dropdown">Drop Down <b class="fa fa-angle-down"></b></a>
-										<ul class="dropdown-menu">
-											<li><a href="404.html">Services</a></li>
-											<li class="divider"></li>
-											<li><a class="s-menu" href="#">Pages <b class="fa fa-angle-right"></b></a>
-												<ul class="dropdown-menu sub-menu">
-													<li><a href="404.html">Error</a></li>
-													<li class="divider"></li>
-													<li><a href="gallery.html">Gallery</a></li>
-												</ul>
-											</li>
+									<li class="active"><a href="/FireFight/index" data-hover="主页">主页</a></li>
+									<li><a href="/FireFight/about" data-hover="关于">关于</a></li>
+									<li><a href="/FireFight/blog" data-hover="动态">动态</a></li>
+									<!--									<li class="dropdown">-->
+									<!--										<a href="services.html" data-hover="Drop Down" class="dropdown-toggle" data-toggle="dropdown">Drop Down <b class="fa fa-angle-down"></b></a>-->
+									<!--										<ul class="dropdown-menu">-->
+									<!--											<li><a href="404.html">Services</a></li>-->
+									<!--											<li class="divider"></li>-->
+									<!--											<li><a class="s-menu" href="#">Pages <b class="fa fa-angle-right"></b></a>-->
+									<!--												<ul class="dropdown-menu sub-menu">-->
+									<!--													<li><a href="404.html">Error</a></li>-->
+									<!--													<li class="divider"></li>-->
+									<!--													<li><a href="gallery.html">Gallery</a></li>-->
+									<!--												</ul>-->
+									<!--											</li>-->
 
-										</ul>
-									</li>
+									<!--										</ul>-->
+									<!--									</li>-->
 
-									<li class="active"><a href="Contact.html" data-hover="Contact">Contact</a></li>
+									<li><a href="/FireFight/contact" data-hover="联系我们">联系我们</a></li>
 								</ul>
 							</nav>
 						</div>
 					</div>
+
 					<!-- search -->
 					<div class="search">
 						<div class="cd-main-header">
@@ -103,109 +104,46 @@
                    <div class="services-breadcrumb">
 						<div class="inner_breadcrumb">
 
-							<ul class="short">
-								<li><a href="index.html">Home</a><i>|</i></li>
-								<li>Contact</li>
-							</ul>
 						</div>
 					</div>
 
 		  </div>
 		<!--//banner -->
 
-		<!-- Modal1 -->
-		<div class="modal fade" id="myModal2" tabindex="-1" role="dialog">
-			<div class="modal-dialog">
-				<!-- Modal content-->
-				<div class="modal-content">
-					<div class="modal-header">
-						<button type="button" class="close" data-dismiss="modal">&times;</button>
-
-						<div class="signin-form profile">
-							<h3 class="sign">Sign In</h3>
-							<div class="login-form">
-								<form action="#" method="post">
-									<input type="email" name="email" placeholder="E-mail" required="">
-									<input type="password" name="password" placeholder="Password" required="">
-									<div class="tp">
-										<input type="submit" value="Sign In">
-									</div>
-								</form>
-							</div>
-							<div class="login-social-grids">
-								<ul>
-									<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-									<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-									<li><a href="#"><i class="fa fa-rss"></i></a></li>
-								</ul>
-							</div>
-							<p><a href="#" data-toggle="modal" data-target="#myModal3"> Don't have an account?</a></p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- //Modal1 -->
-		<!-- Modal2 -->
-		<div class="modal fade" id="myModal3" tabindex="-1" role="dialog">
-			<div class="modal-dialog">
-				<!-- Modal content-->
-				<div class="modal-content">
-					<div class="modal-header">
-						<button type="button" class="close" data-dismiss="modal">&times;</button>
-
-						<div class="signin-form profile">
-							<h3 class="sign">Sign Up</h3>
-							<div class="login-form">
-								<form action="#" method="post">
-									<input type="text" name="name" placeholder="Username" required="">
-									<input type="email" name="email" placeholder="Email" required="">
-									<input type="password" name="password" placeholder="Password" required="">
-									<input type="password" name="password" placeholder="Confirm Password" required="">
-									<input type="submit" value="Sign Up">
-								</form>
-							</div>
-							<p><a href="#"> By clicking Sign up, I agree to your terms</a></p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- //Modal2 -->
 	</div>
 	<!--// header_top -->
 <!-- top Products -->
 	<div class="ab_content">
 		<div class="container">
-			<h3 class="tittle-w3ls">Contact</h3>
+			<h3 class="tittle-w3ls">联系我们</h3>
 					
 						<div class="inner_sec_info_w3ls_agile">
 							<div class="col-md-7 contact_grid_right">
-								<h6>Please fill this form to contact with us.</h6>
-								<form action="#" method="post">
+								<h6>请填写下面的信息给我们留言.</h6>
+								<form action="/FireFight/api/message/addMessage" method="post">
 									<div class="col-md-6 col-sm-6 contact_left_grid">
-										<input type="text" name="Name" placeholder="Name" required="">
-										<input type="email" name="Email" placeholder="Email" required="">
+										<input type="text" name="name" placeholder="昵称" required="">
+										<input type="text" name="titl" placeholder="标题" required="">
 									</div>
 									<div class="col-md-6 col-sm-6 contact_left_grid">
-										<input type="text" name="Telephone" placeholder="Telephone" required="">
-										<input type="text" name="Subject" placeholder="Subject" required="">
+										<input type="text" name="telephone" placeholder="电话" required="">
+										<input type="text" name="location" placeholder="住址" required="">
 									</div>
 									<div class="clearfix"> </div>
-									<textarea name="Message" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Message...';}" required="">Message...</textarea>
-									<input type="submit" value="Submit">
-									<input type="reset" value="Clear">
+									<textarea name="content" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Message...';}" required="">留言...</textarea>
+									<input type="submit" value="提交">
+									<input type="reset" value="清除">
 								</form>
 							</div>
 							<div class="col-md-5 contact-left">
-								<h6>Contact Info</h6>
+								<h6>联系方式</h6>
 								<div class="visit">
 									<div class="col-md-2 col-sm-2 col-xs-2 contact-icon">
 										<span class="fa fa-home" aria-hidden="true"></span>
 									</div>
 									<div class="col-md-10 col-sm-10 col-xs-10 contact-text">
-										<h4>Visit us</h4>
-										<p>Parma Via Modena,BO, Italy</p>
+										<h4>我们的位置</h4>
+										<p>中国，河南省</p>
 									</div>
 									<div class="clearfix"></div>
 								</div>
@@ -214,8 +152,8 @@
 										<span class="fa fa-envelope" aria-hidden="true"></span>
 									</div>
 									<div class="col-md-10 col-sm-10 col-xs-10 contact-text">
-										<h4>Mail us</h4>
-										<p><a href="mailto:info@example.com">info@example.com</a></p>
+										<h4>发邮件</h4>
+										<p><a href="mailto:info@example.com">1090282309@qq.com</a></p>
 									</div>
 									<div class="clearfix"></div>
 								</div>
@@ -224,8 +162,8 @@
 										<span class="fa fa-phone" aria-hidden="true"></span>
 									</div>
 									<div class="col-md-10 col-sm-10 col-xs-10 contact-text">
-										<h4>Call us</h4>
-										<p>+18044261149</p>
+										<h4>打电话</h4>
+										<p>+15188418393</p>
 									</div>
 									<div class="clearfix"></div>
 								</div>
@@ -234,7 +172,7 @@
 										<span class="fa fa-fax" aria-hidden="true"></span>
 									</div>
 									<div class="col-md-10 col-sm-10 col-xs-10 contact-text">
-										<h4>Fax</h4>
+										<h4>传真</h4>
 										<p>+1804426349</p>
 									</div>
 									<div class="clearfix"></div>
@@ -250,7 +188,7 @@
 	</div>
 	<div class="contact-map">
 			
-		   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d100949.24429313939!2d-122.44206553967531!3d37.75102885910819!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80859a6d00690021%3A0x4a501367f076adff!2sSan+Francisco%2C+CA%2C+USA!5e0!3m2!1sen!2sin!4v1472190196783" class="map" style="border:0" allowfullscreen=""></iframe>
+<!--		   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d100949.24429313939!2d-122.44206553967531!3d37.75102885910819!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80859a6d00690021%3A0x4a501367f076adff!2sSan+Francisco%2C+CA%2C+USA!5e0!3m2!1sen!2sin!4v1472190196783" class="map" style="border:0" allowfullscreen=""></iframe>-->
 	   </div>
 
 	<!-- footer -->
@@ -259,7 +197,7 @@
 			<div class="container">
 				<div class="footer-grid-wthree-agiles">
 					<div class="col-md-5 footer-grid-wthree-agile">
-						<h3>About us</h3>
+						<h3>关于我们</h3>
 						<p>Lorem ipsum dolor sit consectetur elit. Nam eget egestas erat. In hachabi tasse platea dictumst. hachabi tasse platea
 							dictumst
 						</p>
@@ -273,29 +211,20 @@
 							<li><a href="#"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
 						</ul>
 					</div>
-					<div class="col-md-3 footer-grid-wthree-agile">
-						<h3>Links</h3>
+					<div class="col-md-3 footer-grid-wthree-agile" style="float: right">
+						<h3>链接</h3>
 						<ul class="footer-list">
-							<li> <a href="about.html">About</a> </li>
-							<li> <a href="gallery.html">Gallery</a> </li>
-							<li> <a href="shop.html">Shop</a> </li>
-							<li> <a href="blog.html">Blog</a> </li>
-							<li> <a href="404.html">Events</a> </li>
-							<li> <a href="contact.html">Contact</a> </li>
+							<li> <a href="/FireFight/about">关于</a> </li>
+							<li> <a href="/FireFight/shop">商城</a> </li>
+							<li> <a href="/FireFight/blog">动态</a> </li>
+							<li> <a href="/FireFight/404">日志</a> </li>
+							<li> <a href="/FireFight/contact">联系我们</a> </li>
 						</ul>
-					</div>
-					<div class="col-md-4 footer-grid-wthree-agile">
-						<h3>Newsletter</h3>
-						<form action="#" method="post">
-							<input type="text" name="text" placeholder="Name" required="">
-							<input type="email" name="Email" placeholder="Email" required="">
-							<input type="submit" value="subscribe now">
-						</form>
 					</div>
 					<div class="clearfix"> </div>
 				</div>
 				<div class="copy_right">
-					<p>Copyright &copy; 2018.Company name All rights reserved.More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p>
+<!--					<p>Copyright &copy; 2018.Company name All rights reserved.More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p>-->
 				</div>
 			</div>
 		</div>
