--- a/src/main/webapp/WEB-INF/pages/profile.html
+++ b/src/main/webapp/WEB-INF/pages/profile.html
@@ -36,7 +36,7 @@
         <!-- Navigation -->
         <nav class="navbar navbar-default navbar-static-top m-b-0">
             <div class="navbar-header" style="height:50px">
-                <div class="top-left-part"><a class="logo" href="manger.html"><b><img src="/FireFight/plugins/images/pixeladmin-logo.png" alt="home" /></b><span class="hidden-xs"><img src="/FireFight/plugins/images/pixeladmin-text.png" alt="home" /></span></a></div>
+                <div class="top-left-part"><a class="logo" href="manager/manger.html"><b><img src="/FireFight/plugins/images/pixeladmin-logo.png" alt="home" /></b><span class="hidden-xs"><img src="/FireFight/plugins/images/pixeladmin-text.png" alt="home" /></span></a></div>
                 <ul class="nav navbar-top-links navbar-left m-l-20 hidden-xs">
                     <div>
                         <form role="search" class="app-search hidden-xs">
