--- a/src/main/webapp/WEB-INF/pages/single.html
+++ b/src/main/webapp/WEB-INF/pages/single.html
@@ -17,13 +17,13 @@
 		}
 	</script>
 	<!--//tags -->
-	<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
-	<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
-	<link rel="stylesheet" type="text/css" href="css/jquery-ui1.css">
-	<link rel="stylesheet" href="css/shop.css" type="text/css" media="screen" property="" />
-	<link rel="stylesheet" href="css/flexslider.css" type="text/css" media="screen" />
-	<link href="css/easy-responsive-tabs.css" rel='stylesheet' type='text/css' />
-	<link href="css/font-awesome.css" rel="stylesheet">
+	<link href="/FireFight/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+	<link href="/FireFight/css/style2.css" rel="stylesheet" type="text/css" media="all" />
+	<link rel="stylesheet" type="text/css" href="/FireFight/css/jquery-ui1.css">
+	<link rel="stylesheet" href="/FireFight/css/shop.css" type="text/css" media="screen" property="" />
+	<link rel="stylesheet" href="/FireFight/css/flexslider.css" type="text/css" media="screen" />
+	<link href="/FireFight/css/easy-responsive-tabs.css" rel='stylesheet' type='text/css' />
+	<link href="/FireFight/css/font-awesome.css" rel="stylesheet">
 	<!-- //for bootstrap working -->
 	<link href="http://fonts.googleapis.com/css?family=Montserrat:200,200i,300,400,400i,500,500i,600,600i,700,700i,800" rel="stylesheet">
 	<link href='http://fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700,900,900italic,700italic'
@@ -38,57 +38,52 @@
 				<nav class="navbar navbar-default">
 					<div class="navbar-header navbar-left">
 						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-									<span class="sr-only">Toggle navigation</span>
-									<span class="icon-bar"></span>
-									<span class="icon-bar"></span>
-									<span class="icon-bar"></span>
-								</button>
-						<h1><a class="navbar-brand" href="index.html"> Surf Inn</a></h1>
+							<span class="sr-only">Toggle navigation</span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+						<h1><a class="navbar-brand" href="index.html"> 消防</a></h1>
 					</div>
-					<!-- Collect the nav links, forms, and other content for toggling -->
-				    <div class="header_left">
+					<div class="header_left" >
 						<ul>
-							<li><div class="surfcart surfcart2 cart cart box_1">
-													<form action="#" method="post" class="last">
-														<input type="hidden" name="cmd" value="_cart">
-														<input type="hidden" name="display" value="1">
-														<button class="top_surf_cart" type="submit" name="submit" value=""><i class="fa fa-cart-arrow-down" aria-hidden="true"></i></button>
-													</form>
-												</div>
-							</li>
-							<li><a class="sign" href="#" data-toggle="modal" data-target="#myModal2"><i class="fa fa-user" aria-hidden="true"></i></a></li>
+							<li><a class="shop" href="/FireFight/shop">Shop Now</a></li>
+							<!--							<li ><a   href="#" data-toggle="modal" data-target="#myModal2"><i class="fa fa-user" aria-hidden="true" style="display:none"></i></a></li>-->
+							<li ><a class="shop"  href="/FireFight/userProfile">账户</a></li>
 
 						</ul>
 					</div>
+					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
 
 						<div class="top_nav_left">
 							<nav class="cl-effect-15" id="cl-effect-15">
 								<ul>
-									<li><a href="index.html" data-hover="Home">Home</a></li>
-									<li><a href="about.html" data-hover="About">About</a></li>
-									<li><a href="blog.html" data-hover="Blog">Blog</a></li>
-									<li class="dropdown">
-										<a href="services.html" data-hover="Drop Down" class="dropdown-toggle" data-toggle="dropdown">Drop Down <b class="fa fa-angle-down"></b></a>
-										<ul class="dropdown-menu">
-											<li><a href="404.html">Services</a></li>
-											<li class="divider"></li>
-											<li><a class="s-menu" href="#">Pages <b class="fa fa-angle-right"></b></a>
-												<ul class="dropdown-menu sub-menu">
-													<li><a href="404.html">Error</a></li>
-													<li class="divider"></li>
-													<li><a href="gallery.html">Gallery</a></li>
-												</ul>
-											</li>
+									<li class="active"><a href="/FireFight/index" data-hover="主页">主页</a></li>
+									<li><a href="/FireFight/about" data-hover="关于">关于</a></li>
+									<li><a href="/FireFight/blog" data-hover="动态">动态</a></li>
+									<!--									<li class="dropdown">-->
+									<!--										<a href="services.html" data-hover="Drop Down" class="dropdown-toggle" data-toggle="dropdown">Drop Down <b class="fa fa-angle-down"></b></a>-->
+									<!--										<ul class="dropdown-menu">-->
+									<!--											<li><a href="404.html">Services</a></li>-->
+									<!--											<li class="divider"></li>-->
+									<!--											<li><a class="s-menu" href="#">Pages <b class="fa fa-angle-right"></b></a>-->
+									<!--												<ul class="dropdown-menu sub-menu">-->
+									<!--													<li><a href="404.html">Error</a></li>-->
+									<!--													<li class="divider"></li>-->
+									<!--													<li><a href="gallery.html">Gallery</a></li>-->
+									<!--												</ul>-->
+									<!--											</li>-->
 
-										</ul>
-									</li>
+									<!--										</ul>-->
+									<!--									</li>-->
 
-									<li><a href="Contact.html" data-hover="Contact">Contact</a></li>
+									<li><a href="/FireFight/contact" data-hover="联系我们">联系我们</a></li>
 								</ul>
 							</nav>
 						</div>
 					</div>
+
 					<!-- search -->
 					<div class="search">
 						<div class="cd-main-header">
@@ -107,19 +102,8 @@
 				</nav>
 			</div>
 		</div>
+
 		<!-- banner -->
-		<div class="banner_inner">
-			<div class="services-breadcrumb">
-				<div class="inner_breadcrumb">
-
-					<ul class="short">
-						<li><a href="index.html">Home</a><i>|</i></li>
-						<li>Shop</li>
-					</ul>
-				</div>
-			</div>
-
-		</div>
 		<!--//banner -->
 
 		<!-- Modal1 -->
@@ -192,13 +176,13 @@
 
 						<ul class="slides">
 							<li data-thumb="images/d2.jpg">
-								<div class="thumb-image"> <img src="images/d2.jpg" data-imagezoom="true" class="img-responsive"> </div>
+								<div class="thumb-image"> <img src="/FireFight/images/d2.jpg" data-imagezoom="true" class="img-responsive"> </div>
 							</li>
 							<li data-thumb="images/d1.jpg">
-								<div class="thumb-image"> <img src="images/d1.jpg" data-imagezoom="true" class="img-responsive"> </div>
+								<div class="thumb-image"> <img src="/FireFight/images/d1.jpg" data-imagezoom="true" class="img-responsive"> </div>
 							</li>
 							<li data-thumb="images/d3.jpg">
-								<div class="thumb-image"> <img src="images/d3.jpg" data-imagezoom="true" class="img-responsive"> </div>
+								<div class="thumb-image"> <img src="/FireFight/images/d3.jpg" data-imagezoom="true" class="img-responsive"> </div>
 							</li>
 						</ul>
 						<div class="clearfix"></div>
@@ -308,7 +292,7 @@
 								<div class="bootstrap-tab-text-grids">
 									<div class="bootstrap-tab-text-grid">
 										<div class="bootstrap-tab-text-grid-left">
-											<img src="images/t1.jpg" alt=" " class="img-responsive">
+											<img src="/FireFight/images/t1.jpg" alt=" " class="img-responsive">
 										</div>
 										<div class="bootstrap-tab-text-grid-right">
 											<ul>
@@ -360,7 +344,7 @@
 					<div class="product-surf-info surf">
 						<div class="men-pro-item">
 							<div class="men-thumb-item">
-								<img src="images/s4.jpg" alt="">
+								<img src="/FireFight/images/s4.jpg" alt="">
 								<div class="men-cart-pro">
 									<div class="inner-men-cart-pro">
 										<a href="single.html" class="link-product-add-cart">Quick View</a>
@@ -409,7 +393,7 @@
 					<div class="product-surf-info surf">
 						<div class="men-pro-item">
 							<div class="men-thumb-item">
-								<img src="images/s5.jpg" alt="">
+								<img src="/FireFight/images/s5.jpg" alt="">
 								<div class="men-cart-pro">
 									<div class="inner-men-cart-pro">
 										<a href="single.html" class="link-product-add-cart">Quick View</a>
@@ -458,7 +442,7 @@
 					<div class="product-surf-info surf">
 						<div class="men-pro-item">
 							<div class="men-thumb-item">
-								<img src="images/s7.jpg" alt="">
+								<img src="/FireFight/images/s7.jpg" alt="">
 								<div class="men-cart-pro">
 									<div class="inner-men-cart-pro">
 										<a href="single.html" class="link-product-add-cart">Quick View</a>
@@ -507,7 +491,7 @@
 					<div class="product-surf-info surf">
 						<div class="men-pro-item">
 							<div class="men-thumb-item">
-								<img src="images/s8.jpg" alt="">
+								<img src="/FireFight/images/s8.jpg" alt="">
 								<div class="men-cart-pro">
 									<div class="inner-men-cart-pro">
 										<a href="single.html" class="link-product-add-cart">Quick View</a>
@@ -573,7 +557,7 @@
 			<div class="container">
 				<div class="footer-grid-wthree-agiles">
 					<div class="col-md-5 footer-grid-wthree-agile">
-						<h3>About us</h3>
+						<h3>关于我们</h3>
 						<p>Lorem ipsum dolor sit consectetur elit. Nam eget egestas erat. In hachabi tasse platea dictumst. hachabi tasse platea
 							dictumst
 						</p>
@@ -587,29 +571,27 @@
 							<li><a href="#"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
 						</ul>
 					</div>
-					<div class="col-md-3 footer-grid-wthree-agile">
-						<h3>Links</h3>
+					<div class="col-md-3 footer-grid-wthree-agile" style="float: right">
+						<h3>链接</h3>
 						<ul class="footer-list">
-							<li> <a href="about.html">About</a> </li>
-							<li> <a href="gallery.html">Gallery</a> </li>
-							<li> <a href="shop.html">Shop</a> </li>
-							<li> <a href="blog.html">Blog</a> </li>
-							<li> <a href="404.html">Events</a> </li>
-							<li> <a href="contact.html">Contact</a> </li>
+							<li> <a href="/FireFight/about">关于</a> </li>
+							<li> <a href="/FireFight/shop">商城</a> </li>
+							<li> <a href="/FireFight/blog">动态</a> </li>
+							<li> <a href="/FireFight/404">日志</a> </li>
+							<li> <a href="/FireFight/contact">联系我们</a> </li>
 						</ul>
 					</div>
-					<div class="col-md-4 footer-grid-wthree-agile">
-						<h3>Newsletter</h3>
-						<form action="#" method="post">
-							<input type="text" name="text" placeholder="Name" required="">
-							<input type="email" name="Email" placeholder="Email" required="">
-							<input type="submit" value="subscribe now">
-						</form>
-					</div>
+					<!--					<div class="col-md-4 footer-grid-wthree-agile">-->
+					<!--						<h3>Newsletter</h3>-->
+					<!--						<form action="#" method="post">-->
+					<!--							<input type="text" name="text" placeholder="Name" required="">-->
+					<!--							<input type="email" name="Email" placeholder="Email" required="">-->
+					<!--							<input type="submit" value="subscribe now">-->
+					<!--						</form>-->
+					<!--					</div>-->
 					<div class="clearfix"> </div>
 				</div>
 				<div class="copy_right">
-					<p>Copyright &copy; 2018.Company name All rights reserved.More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p>
 				</div>
 			</div>
 		</div>
@@ -618,12 +600,12 @@
 	<!-- //footer -->
 	<a href="#home" class="scroll" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
 	<!-- js -->
-	<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
+	<script type="text/javascript" src="/FireFight/js/jquery-2.1.4.min.js"></script>
 	<!-- single -->
-	<script src="js/imagezoom.js"></script>
+	<script src="/FireFight/js/imagezoom.js"></script>
 	<!-- single -->
 	<!-- script for responsive tabs -->
-	<script src="js/easy-responsive-tabs.js"></script>
+	<script src="/FireFight/js/easy-responsive-tabs.js"></script>
 	<script>
 		$(document).ready(function () {
 			$('#horizontalTab').easyResponsiveTabs({
@@ -647,7 +629,7 @@
 		});
 	</script>
 	<!-- FlexSlider -->
-	<script src="js/jquery.flexslider.js"></script>
+	<script src="/FireFight/js/jquery.flexslider.js"></script>
 	<script>
 		// Can also be used with $(document).ready()
 		$(window).load(function () {
@@ -659,10 +641,10 @@
 	</script>
 	<!-- //FlexSlider-->
 	<!--search-bar-->
-	<script src="js/search.js"></script>
+	<script src="/FireFight/js/search.js"></script>
 	<!--//search-bar-->
 	<!-- cart-js -->
-	<script src="js/minicart.js"></script>
+	<script src="/FireFight/js/minicart.js"></script>
 	<script>
 		surf.render();
 
@@ -679,7 +661,7 @@
 	<!-- //cart-js -->
 
 	<!-- price range (top products) -->
-	<script src="js/jquery-ui.js"></script>
+	<script src="/FireFight/js/jquery-ui.js"></script>
 	<script>
 		//<![CDATA[ 
 		$(window).load(function () {
@@ -700,8 +682,8 @@
 
 
 	<!-- start-smoth-scrolling -->
-	<script type="text/javascript" src="js/move-top.js"></script>
-	<script type="text/javascript" src="js/jquery.easing.min.js"></script>
+	<script type="text/javascript" src="/FireFight/js/move-top.js"></script>
+	<script type="text/javascript" src="/FireFight/js/jquery.easing.min.js"></script>
 	<script type="text/javascript">
 		jQuery(document).ready(function ($) {
 			$(".scroll").click(function (event) {
@@ -741,9 +723,9 @@
 	</script>
 	<!-- //smooth-scrolling-of-move-up -->
 	<!-- Pricing-Popup-Box-JavaScript -->
-	<script src="js/jquery.magnific-popup.js" type="text/javascript"></script>
+	<script src="/FireFight/js/jquery.magnific-popup.js" type="text/javascript"></script>
 	<!-- //Pricing-Popup-Box-JavaScript -->
-	<script type="text/javascript" src="js/bootstrap.js"></script>
+	<script type="text/javascript" src="/FireFight/js/bootstrap.js"></script>
 </body>
 
 </html>
