--- a/src/main/webapp/WEB-INF/pages/about.html
+++ b/src/main/webapp/WEB-INF/pages/about.html
@@ -35,46 +35,46 @@
 				<nav class="navbar navbar-default">
 					<div class="navbar-header navbar-left">
 						<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-									<span class="sr-only">Toggle navigation</span>
-									<span class="icon-bar"></span>
-									<span class="icon-bar"></span>
-									<span class="icon-bar"></span>
-								</button>
-						<h1><a class="navbar-brand" href="index.html"> Surf Inn</a></h1>
+							<span class="sr-only">Toggle navigation</span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+						<h1><a class="navbar-brand" href="index.html"> 消防</a></h1>
 					</div>
-					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="header_left">
 						<ul>
-							<li><a class="shop" href="shop.html">Shop Now</a></li>
+							<li><a class="shop" href="/FireFight/shop">Shop Now</a></li>
 							<li><a class="sign" href="#" data-toggle="modal" data-target="#myModal2"><i class="fa fa-user" aria-hidden="true"></i></a></li>
 
 						</ul>
 					</div>
+					<!-- Collect the nav links, forms, and other content for toggling -->
 					<div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
 
 						<div class="top_nav_left">
 							<nav class="cl-effect-15" id="cl-effect-15">
 								<ul>
-									<li><a href="index.html" data-hover="Home">Home</a></li>
-									<li class="active"><a href="about.html" data-hover="About">About</a></li>
-									<li><a href="blog.html" data-hover="Blog">Blog</a></li>
-									<li class="dropdown">
-										<a href="/FireFight/services" data-hover="Drop Down" class="dropdown-toggle" data-toggle="dropdown">Drop Down <b class="fa fa-angle-down"></b></a>
-										<ul class="dropdown-menu">
-											<li><a href="404.html">Services</a></li>
-											<li class="divider"></li>
-											<li><a class="s-menu" href="#">Pages <b class="fa fa-angle-right"></b></a>
-												<ul class="dropdown-menu sub-menu">
-													<li><a href="404.html">Error</a></li>
-													<li class="divider"></li>
-													<li><a href="gallery.html">Gallery</a></li>
-												</ul>
-											</li>
+									<li class="active"><a href="/FireFight/index" data-hover="主页">主页</a></li>
+									<li><a href="/FireFight/about" data-hover="关于">关于</a></li>
+									<li><a href="/FireFight/blog" data-hover="动态">动态</a></li>
+									<!--									<li class="dropdown">-->
+									<!--										<a href="services.html" data-hover="Drop Down" class="dropdown-toggle" data-toggle="dropdown">Drop Down <b class="fa fa-angle-down"></b></a>-->
+									<!--										<ul class="dropdown-menu">-->
+									<!--											<li><a href="404.html">Services</a></li>-->
+									<!--											<li class="divider"></li>-->
+									<!--											<li><a class="s-menu" href="#">Pages <b class="fa fa-angle-right"></b></a>-->
+									<!--												<ul class="dropdown-menu sub-menu">-->
+									<!--													<li><a href="404.html">Error</a></li>-->
+									<!--													<li class="divider"></li>-->
+									<!--													<li><a href="gallery.html">Gallery</a></li>-->
+									<!--												</ul>-->
+									<!--											</li>-->
 
-										</ul>
-									</li>
+									<!--										</ul>-->
+									<!--									</li>-->
 
-									<li><a href="Contact.html" data-hover="Contact">Contact</a></li>
+									<li><a href="/FireFight/contact" data-hover="联系我们">联系我们</a></li>
 								</ul>
 							</nav>
 						</div>
@@ -99,18 +99,6 @@
 			</div>
 		</div>
 		<!-- banner -->
-          <div class="banner_inner">
-                   <div class="services-breadcrumb">
-						<div class="inner_breadcrumb">
-
-							<ul class="short">
-								<li><a href="index.html">Home</a><i>|</i></li>
-								<li>About</li>
-							</ul>
-						</div>
-					</div>
-
-		  </div>
 		<!--//banner -->
 
 		<!-- Modal1 -->
@@ -177,35 +165,12 @@
 	<!--about-->
 	<div class="ab_content">
 		<div class="container">
-			<h3 class="tittle-w3ls">About Us</h3>
+			<h3 class="tittle-w3ls">关于我们</h3>
 			<div class="about-top">
-				<h3 class="subheading">With love for the sport of Surf Inn</h3>
-				<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer quis tristique est, et egestas odio. Mauris ac tristique
-					arcu, sed interdum risus.Integer quis tristique est, et egestas odio. Mauris ac tristique arcu, sed interdum risus.
+				<h3 class="subheading">我们为小区物主提供各种消防服务</h3>
+				<p class="paragraph">.提供消防信息的查看 提供消防知识的普及 提供消防用品的购买。
+					普及消防知识，提高消防安全意识，全面做好消防安全的预防及处置工作
 				</p>
-			</div>
-			<div class="about-main">
-				<div class="col-md-6 about-left">
-				</div>
-
-				<div class="col-md-6 about-right">
-					<h3>Towards wind and waves</h3>
-					<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer quis tristique est, et egestas odio, sed interdum risus.</p>
-
-				</div>
-				<div class="clearfix"> </div>
-			</div>
-			<div class="about-main sec">
-
-				<div class="col-md-6 about-right two">
-					<h3>Towards wind and waves</h3>
-					<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer quis tristique est, et egestas odio, sed interdum risus.</p>
-
-				</div>
-				<div class="col-md-6 about-left two">
-				</div>
-
-				<div class="clearfix"> </div>
 			</div>
 		</div>
 	</div>
@@ -218,7 +183,7 @@
 					<img src="/FireFight/images/g10.jpg" alt=" " class="img-responsive">
 				</div>
 				<div class="col-md-6 news-right">
-					<h4>Quisque lacinia quam sed</h4>
+					<h4>消防安全</h4>
 					<p class="sub_p">Etiam faucibus viverra libero vel efficitur. Ut semper nisl ut laoreet ultrices. Maecenas dictum arcu purus, sit amet
 						volutpat purus viverra sit amet. Quisque lacinia quam sed tortor interdum, malesuada congue nunc ornare. Cum sociis
 						In semper lorem eget tortor pulvinar ultricies.
@@ -232,206 +197,11 @@
 		</div>
 
 	</div>
-			<div class="mid_services">
-			<div class="col-md-6 according_inner_grids">
-				<h3 class="heading two">Who We Are</h3>
-				<div class="according_info">
-					<div class="panel-group about_panel" id="accordion" role="tablist" aria-multiselectable="true">
-						<div class="panel panel-default">
-							<div class="panel-heading" role="tab" id="headingOne">
-								<h4 class="panel-title asd">
-									<a class="pa_italic" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true"
-									    aria-controls="collapseOne">
-							  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i class="glyphicon glyphicon-minus" aria-hidden="true"></i>assumenda est cliche voluptate
-							</a>
-								</h4>
-							</div>
-							<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
-								<div class="panel-body panel_text">
-									Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-									cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-								</div>
-							</div>
-						</div>
-						<div class="panel panel-default">
-							<div class="panel-heading" role="tab" id="headingTwo">
-								<h4 class="panel-title asd">
-									<a class="pa_italic collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false"
-									    aria-controls="collapseTwo">
-							  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i class="glyphicon glyphicon-minus" aria-hidden="true"></i>Itaque earum rerum
-							</a>
-								</h4>
-							</div>
-							<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-								<div class="panel-body panel_text">
-									Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-									cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-								</div>
-							</div>
-						</div>
-						<div class="panel panel-default">
-							<div class="panel-heading" role="tab" id="headingThree">
-								<h4 class="panel-title asd">
-									<a class="pa_italic collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false"
-									    aria-controls="collapseThree">
-							  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i class="glyphicon glyphicon-minus" aria-hidden="true"></i>autem accusamus terry qui
-							</a>
-								</h4>
-							</div>
-							<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-								<div class="panel-body panel_text">
-									Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-									cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-								</div>
-							</div>
-						</div>
-						<div class="panel panel-default">
-							<div class="panel-heading" role="tab" id="headingThree">
-								<h4 class="panel-title asd">
-									<a class="pa_italic collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false"
-									    aria-controls="collapseThree">
-							  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span><i class="glyphicon glyphicon-minus" aria-hidden="true"></i>autem accusamus terry qui
-							</a>
-								</h4>
-							</div>
-							<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
-								<div class="panel-body panel_text">
-									Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
-									cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-			</div>
-			<div class="col-md-6 mid_services_img">
-				<div class="bar-grids">
-					<h3 class="heading two three">Our Skills</h3>
-					<div class="skill_info">
-						<h6>Development<span> 95% </span></h6>
-						<div class="progress">
-							<div class="progress-bar progress-bar-striped active" style="width: 95%">
-							</div>
-						</div>
-						<h6>Pricing<span> 85% </span></h6>
-						<div class="progress">
-							<div class="progress-bar progress-bar-striped active" style="width: 85%">
-							</div>
-						</div>
-						<h6>Production <span>90% </span></h6>
-						<div class="progress">
-							<div class="progress-bar progress-bar-striped active" style="width: 90%">
-							</div>
-						</div>
-						<h6>Advertising <span>86% </span></h6>
-						<div class="progress prgs-last">
-							<div class="progress-bar progress-bar-striped active" style="width: 86%">
-							</div>
-						</div>
-					</div>
-				</div>
-
-			</div>
-			<div class="clearfix"> </div>
-		</div>
 
 	<!--/works-->
-	<div class="works">
-		<div class="container">
-			<h3 class="tittle-w3ls cen">What we Provide</h3>
-			<div class="inner_sec_info_w3ls_agile">
-				<div class="ser-first">
-					<div class="col-md-3 ser-first-grid text-center">
-						<span class="fa fa-shield" aria-hidden="true"></span>
-						<h3>Stand Up Paddle</h3>
-						<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-					</div>
-					<div class="col-md-3 ser-first-grid text-center">
-						<span class="fa fa-pencil" aria-hidden="true"></span>
-						<h3>Day Tours</h3>
-						<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-					</div>
-					<div class="col-md-3 ser-first-grid text-center">
-						<span class="fa fa-star" aria-hidden="true"></span>
-						<h3>After Schools</h3>
-						<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-					</div>
-					<div class="col-md-3 ser-first-grid text-center">
-						<span class="fa fa-thumbs-up" aria-hidden="true"></span>
-						<h3>Gift Vouchers</h3>
-						<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-					</div>
-					<div class="clearfix"></div>
-				</div>
-			</div>
-
-		</div>
-	</div>
 	<!--/works-->
 
 	<!-- Testimonials -->
-	<div class="testimonials">
-		<div class="container">
-			<h3 class="tittle-w3ls">What people says</h3>
-			<div class="inner_sec_info_w3ls_agile">
-				<div class="col-md-6 testimonials-main">
-						<div class="carousel slide two" data-ride="carousel" id="quote-carousel">
-							<!-- Bottom Carousel Indicators -->
-							<ol class="carousel-indicators two">
-								<li data-target="#quote-carousel" data-slide-to="0" class="active"></li>
-								<li data-target="#quote-carousel" data-slide-to="1"></li>
-								<li data-target="#quote-carousel" data-slide-to="2"></li>
-							</ol>
-
-						<div class="carousel-inner">
-								<div class="item active">
-
-									<div class="inner-testimonials">
-										<img src="/FireFight/images/1.jpg" alt=" " class="img-responsive" />
-										<div class="teastmonial-info">
-											<h5>Andy Wovel</h5>
-											<span>Lorem Ipsum</span>
-											<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis hendrerit lobortis elementum, Quis nostrum exercitationem
-												ullam corporis suscipit laboriosam. </p>
-										</div>
-									</div>
-								</div>
-								<div class="item">
-
-									<div class="inner-testimonials">
-										<img src="/FireFight/images/2.jpg" alt=" " class="img-responsive" />
-										<div class="teastmonial-info">
-											<h5>Bernard Russo</h5>
-											<span>Lorem Ipsum</span>
-											<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis hendrerit lobortis elementum, Quis nostrum exercitationem
-												ullam corporis suscipit laboriosam. </p>
-										</div>
-									</div>
-								</div>
-								<div class="item">
-
-									<div class="inner-testimonials">
-										<img src="/FireFight/images/3.jpg" alt=" " class="img-responsive" />
-										<div class="teastmonial-info">
-											<h5>Alex Merphy</h5>
-											<span>Lorem Ipsum</span>
-											<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis hendrerit lobortis elementum, Quis nostrum exercitationem
-												ullam corporis suscipit laboriosam. </p>
-										</div>
-									</div>
-								</div>
-								<!-- Carousel Buttons Next/Prev -->
-							<a data-slide="prev" href="#quote-carousel" class="left carousel-control"><i class="fa fa-chevron-left"></i></a>
-							<a data-slide="next" href="#quote-carousel" class="right carousel-control"><i class="fa fa-chevron-right"></i></a>
-
-						</div>
-				</div>
-
-				</div>
-			</div>
-		</div>
-	</div>
 	<!-- //Testimonials -->
 	<!-- footer -->
 	<footer>
@@ -439,7 +209,7 @@
 			<div class="container">
 				<div class="footer-grid-wthree-agiles">
 					<div class="col-md-5 footer-grid-wthree-agile">
-						<h3>About us</h3>
+						<h3>关于我们</h3>
 						<p>Lorem ipsum dolor sit consectetur elit. Nam eget egestas erat. In hachabi tasse platea dictumst. hachabi tasse platea
 							dictumst
 						</p>
@@ -453,29 +223,20 @@
 							<li><a href="#"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
 						</ul>
 					</div>
-					<div class="col-md-3 footer-grid-wthree-agile">
-						<h3>Links</h3>
+					<div class="col-md-3 footer-grid-wthree-agile" style="float: right">
+						<h3>链接</h3>
 						<ul class="footer-list">
-							<li> <a href="about.html">About</a> </li>
-							<li> <a href="gallery.html">Gallery</a> </li>
-							<li> <a href="shop.html">Shop</a> </li>
-							<li> <a href="blog.html">Blog</a> </li>
-							<li> <a href="404.html">Events</a> </li>
-							<li> <a href="contact.html">Contact</a> </li>
+							<li> <a href="/FireFight/about">关于</a> </li>
+							<li> <a href="/FireFight/shop">商城</a> </li>
+							<li> <a href="/FireFight/blog">动态</a> </li>
+							<li> <a href="/FireFight/404">日志</a> </li>
+							<li> <a href="/FireFight/contact">联系我们</a> </li>
 						</ul>
-					</div>
-					<div class="col-md-4 footer-grid-wthree-agile">
-						<h3>Newsletter</h3>
-						<form action="#" method="post">
-							<input type="text" name="text" placeholder="Name" required="">
-							<input type="email" name="Email" placeholder="Email" required="">
-							<input type="submit" value="subscribe now">
-						</form>
 					</div>
 					<div class="clearfix"> </div>
 				</div>
 				<div class="copy_right">
-					<p>Copyright &copy; 2018.Company name All rights reserved.More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p>
+					<!--					<p>Copyright &copy; 2018.Company name All rights reserved.More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p>-->
 				</div>
 			</div>
 		</div>
